plugins/elements/gstfunnel.c
@@ -260,10 +260,13 @@ gst_funnel_sink_event (GstPad * pad, GstObject * parent, GstEvent * event)
     unlock = TRUE;
     GST_PAD_STREAM_LOCK (funnel->srcpad);
 
-    if ((GST_EVENT_TYPE (event) == GST_EVENT_EOS) &&
-        (!gst_funnel_all_sinkpads_eos_unlocked (funnel, pad))) {
-      forward = FALSE;
-    } else if (funnel->last_sinkpad && (pad != funnel->last_sinkpad)) {
+    if (GST_EVENT_TYPE (event) == GST_EVENT_EOS) {
+      if (!gst_funnel_all_sinkpads_eos_unlocked (funnel, pad)) {
+        forward = FALSE;
+      } else {
+        forward = TRUE;
+      }
+    } else if (pad != funnel->last_sinkpad) {
       forward = FALSE;
     }
   }
