tests/check/elements/funnel.c
@@ -204,7 +204,7 @@ GST_START_TEST (test_funnel_eos)
               td.funnelsink11)));
 
   /* This will fail because everything is EOS already */
-  fail_unless (gst_pad_push_event (td.mysrc1, gst_event_new_eos ()));
+  fail_if (gst_pad_push_event (td.mysrc1, gst_event_new_eos ()));
   fail_unless (num_eos == 2);
 
   fail_unless (gst_pad_unlink (td.mysrc1, td.funnelsink11));
@@ -227,7 +227,7 @@ GST_START_TEST (test_funnel_eos)
 
   fail_unless (gst_pad_push_event (td.mysrc1, gst_event_new_eos ()));
   fail_unless (gst_pad_push_event (td.mysrc2, gst_event_new_eos ()));
-  fail_unless (num_eos == 2);
+  fail_unless (num_eos == 3);
 
   fail_unless (gst_pad_unlink (td.mysrc1, td.funnelsink11));
   gst_element_release_request_pad (td.funnel, td.funnelsink11);
